--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cpf_cnpj_validator: ^2.0.0  
 
 
   # The following adds the Cupertino Icons font to your application.
