All tests and pipeline finished

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -9,7 +9,7 @@ on:
   push:
     branches: [ "develop" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "master" ]
 
 jobs:
   build:
