Editing files to merge

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -7,7 +7,7 @@ name: Flutter
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "develop" ]
   pull_request:
     branches: [ "master" ]
 
