--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.5
   photo_view: ^0.14.0
-  test_html_builder: ^3.0.1
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
