--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^1.1.5
   photo_view: ^0.14.0
   dio: ^4.0.6
+  fluttertoast: ^8.1.1
 
 dev_dependencies:
   flutter_test:
