--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   photo_view: ^0.14.0
   dio: ^4.0.6
   fluttertoast: ^8.1.1
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
